# docker-dsm7-ansible

./: Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml  fingerprint.yml
fingerprinting/: .gitignore  Makefile  README.md  pyproject.toml
fingerprinting/molecule/default/: converge.yml  dsm-full-fingerprint.sh  molecule.yml
fingerprinting/results/: README.md  parse_fingerprints.py
